--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,17 @@
-# Editor configuration, see https://editorconfig.org
+# Editor configuration, see http://editorconfig.org
 root = true
 
 [*]
+indent_size = 4
+max_line_length = 120
 charset = utf-8
+end_of_line = lf
 indent_style = space
-indent_size = 2
-insert_final_newline = true
 trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.ts]
+
+[*.{js,ts}]
 quote_type = single
 
 [*.md]
