--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "lta-btds-gui": {
+        "lta-madt-gui": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,18 +17,18 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist/lta-btds-gui",
+                        "outputPath": "dist",
                         "index": "src/index.html",
                         "browser": "src/main.ts",
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+                        "styles": ["src/styles/styles.scss"],
                         "scripts": [],
-                        "server": "src/main.server.ts",
-                        "prerender": true,
-                        "ssr": {
-                            "entry": "server.ts"
+                        "prerender": false,
+                        "ssr": false,
+                        "stylePreprocessorOptions": {
+                            "includePaths": ["src/styles"]
                         }
                     },
                     "configurations": {
@@ -59,10 +59,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "buildTarget": "lta-btds-gui:build:production"
+                            "buildTarget": "lta-madt-gui:build:production"
                         },
                         "development": {
-                            "buildTarget": "lta-btds-gui:build:development"
+                            "buildTarget": "lta-madt-gui:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -70,7 +70,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "buildTarget": "lta-btds-gui:build"
+                        "buildTarget": "lta-madt-gui:build"
                     }
                 },
                 "test": {
@@ -79,7 +79,7 @@
                         "polyfills": ["zone.js", "zone.js/testing"],
                         "tsConfig": "tsconfig.spec.json",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["@angular/material/prebuilt-themes/indigo-pink.scss", "src/styles.scss"],
+                        "styles": ["src/styles/styles.scss"],
                         "scripts": []
                     }
                 },
