--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "lta-btds-gui",
+    "name": "lta-madt-gui",
     "version": "0.0.0",
     "private": true,
     "scripts": {
@@ -16,54 +16,53 @@
         "watch": "ng build --watch --configuration development"
     },
     "dependencies": {
-        "@angular/animations": "17.3.7",
-        "@angular/cdk": "17.3.7",
-        "@angular/common": "17.3.7",
-        "@angular/compiler": "17.3.7",
-        "@angular/core": "17.3.7",
-        "@angular/forms": "17.3.7",
-        "@angular/material": "17.3.7",
-        "@angular/platform-browser": "17.3.7",
-        "@angular/platform-browser-dynamic": "17.3.7",
-        "@angular/platform-server": "17.3.7",
-        "@angular/router": "17.3.7",
-        "@angular/ssr": "17.3.6",
-        "@ngrx/signals": "17.2.0",
-        "express": "4.19.2",
-        "rxjs": "7.8.1",
-        "tslib": "2.6.2",
-        "zone.js": "0.14.5"
+        "@angular/animations": "^17.0.0",
+        "@angular/cdk": "^17.3.2",
+        "@angular/common": "^17.0.0",
+        "@angular/compiler": "^17.0.0",
+        "@angular/core": "^17.0.0",
+        "@angular/forms": "^17.0.0",
+        "@angular/material": "^17.3.2",
+        "@angular/platform-browser": "^17.0.0",
+        "@angular/platform-browser-dynamic": "^17.0.0",
+        "@angular/platform-server": "^17.0.0",
+        "@angular/router": "^17.0.0",
+        "@angular/ssr": "^17.0.10",
+        "@ngrx/signals": "^17.1.1",
+        "express": "^4.18.2",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.14.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "17.3.6",
+        "@angular-devkit/build-angular": "^17.0.10",
         "@angular-eslint/builder": "17.3.0",
         "@angular-eslint/eslint-plugin": "17.3.0",
         "@angular-eslint/eslint-plugin-template": "17.3.0",
         "@angular-eslint/schematics": "17.3.0",
         "@angular-eslint/template-parser": "17.3.0",
-        "@angular/cli": "17.3.6",
-        "@angular/compiler-cli": "17.3.7",
-        "@types/express": "4.17.21",
-        "@types/jasmine": "5.1.4",
-        "@types/node": "20.12.8",
-        "@typescript-eslint/eslint-plugin": "7.8.0",
-        "@typescript-eslint/parser": "7.8.0",
-        "eslint": "9.2.0",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-prettier": "5.1.3",
+        "@angular/cli": "^17.0.10",
+        "@angular/compiler-cli": "^17.0.0",
+        "@types/express": "^4.17.17",
+        "@types/jasmine": "~5.1.0",
+        "@types/node": "^18.18.0",
+        "@typescript-eslint/eslint-plugin": "7.2.0",
+        "@typescript-eslint/parser": "7.2.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-simple-import-sort": "12.1.0",
         "husky": "9.0.11",
-        "jasmine-core": "5.1.2",
-        "karma": "6.4.3",
-        "karma-chrome-launcher": "3.2.0",
-        "karma-coverage": "2.2.1",
-        "karma-jasmine": "5.1.0",
-        "karma-jasmine-html-reporter": "2.1.0",
+        "jasmine-core": "~5.1.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
         "lint-staged": "15.2.2",
         "prettier": "3.2.5",
-        "prettier-eslint": "16.3.0",
-        "tailwindcss": "3.4.3",
-        "typescript": "5.4.5",
+        "prettier-eslint": "^16.3.0",
+        "typescript": "~5.2.2",
         "typescript-eslint": "7.8.0"
     }
 }
