--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,15 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
+        "baseUrl": "./src",
         "outDir": "./dist/out-tsc",
+        "paths": {
+            "@styles/*": ["styles/"],
+            "@app/*": ["app/*"],
+            "@dummyData/*": ["app/dummyData/*"],
+            "@models/*": ["app/models/*"],
+            "@components/*": ["app/components/*"]
+        },
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noImplicitOverride": true,
@@ -11,6 +19,7 @@
         "noFallthroughCasesInSwitch": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
+        "noImplicitAny": false,
         "sourceMap": true,
         "declaration": false,
         "experimentalDecorators": true,
